# lh

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: antigravity.rs  claude.rs  codex.rs  common.rs  config.rs  db.rs  fuzzy.rs  gemini.rs  main.rs  opencode.rs  pi.rs  prices.rs  providers.rs  util.rs  zed.rs
src/llm/: anthropic.rs  gemini.rs  mod.rs  openai.rs  xai.rs
