[package]
name = "lh"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
time = { version = "0.3.47", features = ["formatting", "local-offset", "parsing"] }
toml = "1.1.2"
